--- a/silver_provisioning/views/silver_contract_views.xml
+++ b/silver_provisioning/views/silver_contract_views.xml
@@ -9,7 +9,6 @@
                 <xpath expr="//header" position="inside">
                     <!--button name="action_provision_base" string="Aprovisionar Servicio" type="object" class="oe_highlight" invisible="state_service != 'inactive'"/-->
 
-                    <button name="init_contract" type="object" class="oe_highlight"  string="Iniciar Contrato" invisible="state=='open'"/>
 
 
                 </xpath>
@@ -27,7 +26,7 @@
 
                 <xpath expr="//notebook" position="inside">
 
-                    <page name="provisioning" string="Servicio Internet" invisible="state!= 'open' or service_type_code!='internet'" >
+                    <page name="provisioning" string="Servicio Internet" invisible="state not in ['open', 'active'] or service_type_code!='internet'" >
                         <group>
 
                             <field name="wan_config_successful" invisible="1"/>
@@ -37,14 +36,13 @@
                              <field name="link_type" readonly="state_service == 'active'"/>
                           <field name="node_id" readonly="state_service == 'active'"/>
                                         <field name="box_id" readonly="state_service == 'active'" invisible="link_type not in ['fiber', 'fttb']" domain="[('node_id', '=', node_id)]"/>
-                                        <field name="ap_id" readonly="state_service == 'active'" invisible="link_type != 'wifi'"/>
 
                         </group>
    <group>
-                                <group name="ips_networks_2" string="Datos Red Externa Asignada" invisible="link_type == 'lan'">
+                                <group name="ips_networks_2" string="Datos Red Externa Asignada" invisible="link_type != 'fiber'">
 
 
-                                        <field name="core_id" readonly="(state_service == 'active') and (radius_state == 'active') and (core_state == 'active') " options="{'no_create': True}"
+                                        <field name="core_id" readonly="(state_service == 'active')  " options="{'no_create': True}"
                                         domain="[('node_id', '=', node_id)]"
                                         />
                                         <field name="olt_id" readonly="state_service == 'active'"
@@ -55,12 +53,14 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                                                 string="Descubrir ONUS"
                                                 class="oe_highlight"
                                                 invisible="(not olt_id) or (state_service == 'active')"/>
-                                        <field name="discovered_onu_id"
+                                        <field name="discovered_onu_id" colspan="1"
                                                domain="[('olt_id', '=', olt_id)]"
                                                invisible="(not olt_id) or (state_service == 'active')" nolabel="1" />
-                        <field name="olt_port_id" domain="[('olt_id', '=', olt_id)]"/>
-                        <field name="onu_pon_id" />
-   <field name="vlan_id"/>
+                        <field name="olt_port_id" domain="[('olt_id', '=', olt_id)]"  readonly="state_service == 'active'"/>
+                        <field name="onu_pon_id"  readonly="state_service == 'active'"/>
+                                    <field name="changed_onu" invisible="1"/>
+                                    <field name="old_onu_pon_id" invisible="1"/>
+   <field name="vlan_id"  readonly="state_service == 'active'"/>
 
 
 
@@ -68,27 +68,29 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                                                 type="object"
                                                 string="Aprovisionar Servicio"
                                                 class="oe_highlight"
-                                                invisible="(not olt_id) or(state != 'open') or (state_service != 'inactive') "/>
+                                                invisible="(not olt_id) or(state not in ['open', 'active']) or (state_service != 'inactive') "/>
 
                                     <button name="action_check_olt_state"
                                                 type="object"
                                                 string="Comprobar conexión"
                                                 class="oe_highlight"
-                                                invisible="(state != 'open') or (state_service != 'active')"/>
+                                                invisible="(state not in ['open', 'active']) or (state_service != 'active')"/>
                                         <field name="olt_state"  nolabel="1"
-                                               widget="badge"  invisible="(state != 'open') or (state_service != 'active')"
+                                               widget="badge"  invisible="(state not in ['open', 'active']) or (state_service != 'active')"
                            decoration-success="olt_state in ['active', 'connected']"
                            decoration-warning="olt_state in ('suspended', 'disabled')"
                            decoration-danger="olt_state in ['removed', 'down']"/>
 
-                                                        <button name="action_suspend_service" string="Suspender Servicio" type="object" class="oe_highlight" invisible="(state != 'open') or (state_service != 'active')"/>
-                    <button name="action_terminate_service" string="Dar de Baja" type="object" class="oe_highlight" invisible="(state != 'open') or (state_service not in ['suspended'])"/>
-                    <button name="action_reconnection_service_button" type="object" class="oe_highlight" string="Restaurar Servicio" invisible="(state != 'open') or ( state_service not in ['terminated', 'suspended']) "/>
+                                                        <button name="action_suspend_service" string="Suspender Servicio" type="object" class="oe_highlight" invisible="(state not in ['open', 'active']) or (state_service != 'active')"/>
+                    <button name="action_terminate_service" string="Dar de Baja" type="object" class="oe_highlight" invisible="(state not in ['open', 'active']) or (state_service not in ['suspended'])"/>
+                    <button name="action_reconnection_service_button" type="object" class="oe_highlight" string="Restaurar Servicio" invisible="(state not in ['open', 'active']) or ( state_service not in ['terminated', 'suspended']) "/>
 
+             <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Ver ONU"  invisible="(state not in ['open', 'active']) or ( state_service not in ['active']) "/> />
 
                                     </group>
-         <group string="Equipo">
-                                        <field name="stock_lot_id"/>
+
+         <group string="Equipo" invisible="link_type != 'fiber'">
+                                        <field name="stock_lot_id" readonly="state_service == 'active'"/>
                     <field name="brand_name"/>
                     <field name="model_name"/>
                     <field name="software_version"/>
@@ -97,29 +99,23 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 
                                         <field name="is_bridge" readonly="state_service == 'active'"/>
 
-                                 <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"  invisible="(state != 'open') or ( state_service not in ['active']) "/> />
-                    <button name="action_change_ont_service" type="object" class="oe_stat_button" icon="fa-exchange" string="Cambiar ONU"  invisible="(state != 'open') or ( state_service not in ['active']) "/>/>
 
                                     </group>
-                                    <!--group  invisible="link_type not in ['fiber', 'fttb']">
-                                        <div class="o_row" >
-                                            <field name="olt_status" widget="badge" decoration-success="olt_status == 'online'" decoration-danger="olt_status in ('offline', 'los')" decoration-warning="olt_status == 'unknown'"/>
-                                            <button name="action_check_olt_status" type="object" icon="fa-question-circle" class="oe_link"/>
-                                        </div>
-                                        <div class="o_row" >
-                                            <field name="olt_status" widget="badge" decoration-success="olt_status == 'online'" decoration-danger="olt_status in ('offline', 'los')" decoration-warning="olt_status == 'unknown'"/>
-                                            <button name="action_check_olt_status" type="object" icon="fa-question-circle" class="oe_link"/>
-                                        </div>
 
-                                        <field name="splitter_id" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']"/>
-                                    </group-->
-                                </group>
-                                <group name="ips_networks_3">
+   </group>
+<group>
 
                                     <group string="Datos Asignados">
 
 
-                                         <field name="ip_address_id"/>
+                                        <field name="core_id" readonly="(state_service == 'active') and (radius_state == 'active') and (core_state == 'active') " options="{'no_create': True}"
+                                        domain="[('node_id', '=', node_id)]"  invisible="link_type == 'fiber'"/>
+                                        <field name="ap_id" readonly="state_service == 'active'" invisible="link_type != 'wifi'" domain="[('core_id', '=', core_id)]"/>
+
+                                    <field name="ip_address_id" domain="link_type == 'fiber' and [('olt_port_id', '=', olt_port_id)] or [('core_id', '=', core_id)]" order="ip_int asc"
+                                    context="{'order_display': 'ip_int asc'}"
+                                    />
+
                                         <field name="pppoe_user"/>
                                         <field name="pppoe_password" password="True"/>
                                             <button name="action_add_radius_access"
@@ -147,7 +143,7 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 
                                     </group>
 
-                                     <group string="Credenciales WiFi">
+                                     <group string="Credenciales WiFi" invisible="link_type != 'fiber'">
 
                                 <field name="sssid" invisible="1"/>
                                 <field name="password" invisible="1" password="True"/>
@@ -167,26 +163,55 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 <field name="state_service" invisible="1"/>
                                          <field name="olt_state" invisible="1" />
                                          <field name="service_type_code" invisible="1"/>
+                                         <group>
   <button name="action_provision_wan" string="Configurar WAN" type="object" class="oe_highlight" invisible="(state_service == 'inactive') or (olt_state != 'active')"/>
-<button name="button_get_wan_info" type="object" string="Info"/>
+<button name="button_get_wan_info" type="object" string="Info" invisible="wan_config_successful==True"
+                                />
+<button name="button_get_wan_info" type="object" string="Info"  invisible="wan_config_successful!=True" class="btn-success"
+                                />
+
                     <button name="action_provision_wifi" string="Aplicar WiFi" type="object" class="oe_highlight" invisible=" (state_service == 'inactive') or (olt_state != 'active')"/>
-<button name="button_get_wifi_info" type="object" string="Wifi"/>
+<button name="button_get_wifi_info" type="object" string="Wifi" invisible="wifi_config_successful==True"
+/>
+<button name="button_get_wifi_info" type="object" string="Wifi" invisible="wifi_config_successful!=True"  class="btn-success"
+/>
+
+                                             </group>
+                                         <group>
+             <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"  invisible="(state not in ['open', 'active']) or ( state_service not in ['active']) "/> />
+</group>
                             </group>
+
+     <group string="Equipo" invisible="link_type == 'fiber'">
+                                        <field name="stock_lot_id" readonly="state_service == 'active'"/>
+                    <field name="brand_name"/>
+                    <field name="model_name"/>
+                    <field name="software_version"/>
+                    <field name="firmware_version"/>
+                <field name="mac_address_onu"/>
+
+                                        <field name="is_bridge" readonly="state_service == 'active'"/>
+
+
+
+                                    </group>
+
+
                                 </group>
 
-                                <group  name="other_info_internet" string="Fechas Programadas">
+                                <group  name="other_info_internet" >
                                     <group name="ips_networks_start" string="Fechas Inicio">
                                         <field name="date_start"/>
                                         <field name="date_active"/>
                                         <field name="date_reconnection"/>
                                     </group>
-                                    <group name="ips_networks_cut" string="Fechas Corte"/>
+                                    <group name="ips_networks_cut" string="Fechas Corte">
                                         <field name="date_cut"/>
                                         <field name="date_renovation"/>
                                         <field name="date_end"/>
                                     </group>
 
-                             <group>
+
 
                         </group>
 
