--- a/silver_provisioning/views/silver_contract_views.xml
+++ b/silver_provisioning/views/silver_contract_views.xml
@@ -85,7 +85,6 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                     <button name="action_terminate_service" string="Dar de Baja" type="object" class="oe_highlight" invisible="(state not in ['open', 'active']) or (state_service not in ['suspended'])"/>
                     <button name="action_reconnection_service_button" type="object" class="oe_highlight" string="Restaurar Servicio" invisible="(state not in ['open', 'active']) or ( state_service not in ['terminated', 'suspended']) "/>
 
-             <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Ver ONU"  invisible="(state not in ['open', 'active']) or ( state_service not in ['active']) "/> />
 
                                     </group>
 
@@ -106,7 +105,7 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 <group>
 
                                     <group string="Datos Asignados">
-
+<group colspan="4">
 
                                         <field name="core_id" readonly="(state_service == 'active') and (radius_state == 'active') and (core_state == 'active') " options="{'no_create': True}"
                                         domain="[('node_id', '=', node_id)]"  invisible="link_type == 'fiber'"/>
@@ -118,6 +117,10 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 
                                         <field name="pppoe_user"/>
                                         <field name="pppoe_password" password="True"/>
+</group>
+                                        <group colspan="4">
+                                            <group colspan="2">
+
                                             <button name="action_add_radius_access"
                                                 type="object"
                                                 string="Establecer usuario"
@@ -139,7 +142,11 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                            decoration-warning="core_state in ('suspended', 'disabled')"
                            decoration-danger="core_state in ['removed', 'down']"  nolabel="1" />
 
-
+</group>
+                                        <group colspan="1">
+             <!--button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"  invisible="(state not in ['open', 'active']) or ( state_service not in ['active', 'suspended']) "/> /-->
+                                        </group>
+                                        </group>
 
                                     </group>
 
@@ -178,7 +185,7 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 
                                              </group>
                                          <group>
-             <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"  invisible="(state not in ['open', 'active']) or ( state_service not in ['active']) "/> />
+             <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"  invisible="(state not in ['open', 'active']) or ( state_service not in ['active', 'suspended']) "/> />
 </group>
                             </group>
 
