--- a/silver_provisioning/views/silver_core_views.xml
+++ b/silver_provisioning/views/silver_core_views.xml
@@ -13,6 +13,13 @@
 
 
                 </xpath-->
+<xpath expr="//field[@name='ip_address_ids']//tree" position="inside">
+    <field name="contract_id" widget="button" action="action_view_contract"/>
+
+</xpath>
+<xpath expr="//field[@name='ip_address_ids']//tree" position="attributes">
+    <attribute name="default_order">contract_id desc, ip_int asc</attribute>
+</xpath>
 
   <xpath expr="//page[1]" position="before">
                       <page string="Contratos">
